css/style.css
/* ... */
.main-ul {
	/* list-style-position: inside; */
	padding-inline-start: 20px !important;
	font-size: 14px !important;
}​

/* ul.main-ul > ul { */
/* ul.notmain { */
.notmain {
	list-style-type: none;
	padding-inline-start: -10px !important;
	font-size: 12px !important;
}​

input[type=date],
.datePicker {
	font-family: "Source Sans Pro", "Trebuchet MS", Helvetica, sans-serif;
	color-scheme: dark;
	background-color: #000000 !important;
	color: #f3f3f3 !important;
	/* width: 120px; */
	font-size: 16px;
}

/* .datePicker { */
input[type=date]::-webkit-calendar-picker-indicator {
	/* background: transparent;
	bottom: 0;
	color: transparent;
	cursor: pointer;
	height: auto;
	left: 0;
	position: absolute;
	right: 0;
	top: 0;
	width: auto; */
	/* filter: invert(100%); */
	margin-left: -1px;
	/* width: 15px; */
	/* right: -15px; */
	/* background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="15" viewBox="0 0 24 24"><path fill="#ffffff" d="M20 3h-1V1h-2v2H7V1H5v2H4c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 18H4V8h16v13z"/></svg>'); */
}

.dayNum {
	font-family: "Source Sans Pro", "Trebuchet MS", Helvetica, sans-serif;
	background-color: #000000 !important;
	color: #f3f3f3 !important;
	outline: none;
	width: 35px !important;
	font-size: 16px;
	padding-left: 0px;
	text-align: left;
	display: inline-block;
	vertical-align: middle;
	box-sizing: border-box;
	height: 1.8em;
	line-height: 1.2;
	margin: 0 0 0 2px;
	-webkit-appearance: textfield;
	appearance: textfield;
}

#datePicker-div {
	display: flex;
	align-items: center;
	justify-content: center;
	flex-wrap: nowrap;
	white-space: nowrap;
	gap: 8px;
	width: 100%;
	max-width: 390px;
	margin: 0 auto;
}

#labelDate,
#labelDay {
	display: inline-flex;
	align-items: center;
	white-space: nowrap;
	flex: 0 0 auto;
}

#datePicker-input {
	flex: 0 0 150px;
	min-width: 150px;
	max-width: 150px;
}

input[type="number"]::-webkit-outer-spin-button,
input[type="number"]::-webkit-inner-spin-button {
	-webkit-appearance: none;
	margin: 0;
}

.toastMaker {
	font-size: 12px;
}

.help {
	font-size: 16px;
}

.possibilities {
	font-size: 20px;
}

.noselect {										 /* disables selection (sometimes) */
  -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Safari */
     -khtml-user-select: none; /* Konqueror HTML */
       -moz-user-select: none; /* Old versions of Firefox */
        -ms-user-select: none; /* Internet Explorer/Edge */
            user-select: none; /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
			 -khtml-user-drag: none;
			 -moz-user-select: -moz-none;
			 	 -o-user-select: none;
			 			user-select: none;
						 		 margin: 0px 2px 0px 2px /* top right bottom left */
						 		/* padding: 0px 2px 0px 2px;	top right bottom left */
}

/* 
::-moz-selection {
  background: transparent;
}

::selection {
  background: transparent;
}*/

.input-units,
.output-units,
.calculation-units {
	padding-left: 4px;
}

.output-number {
/*	width: 50px;*/
	margin-left: 2px;
}

.calculation-number {
/*	width: 50px;*/
	margin-left: 2px;
}

.output-number > input,
.calculation-number > input {
	padding-left: 3px;
}

/*
.main-label { }
*/

fieldset { /*making the position of our <fieldset> relative, we can safely position other elements inside the <fieldset> with absolute values.*/
	position: relative;
	margin: 20px 5px 2px 5px;
/*	padding: 7px 0px 7px 0px;*/
}

legend span { /*fieldset legend positioning*/
	position: absolute;
	top: -8px;
	left: 8px;
	background-color: #000000;
	padding: 0px 3px 0px 3px;
}

/*
.main-legend {}
*/

.QEF-label {
	margin-left: 2px;
}

/*
.div-vertically-centered {
	display: flex;
	height: 3em;
	align-items: center;
}*/

/* override jQuery Theme */
/* http://jqueryui.com/themeroller/?ffDefault=Arial%2CHelvetica%2Csans-serif&fsDefault=0.87em&fwDefault=normal&cornerRadius=5px&bgColorHeader=%23e9e9e9&bgTextureHeader=flat&borderColorHeader=%23dddddd&fcHeader=%23333333&iconColorHeader=%23444444&bgColorContent=%23ffffff&bgTextureContent=flat&borderColorContent=%23dddddd&fcContent=%23333333&iconColorContent=%23444444&bgColorDefault=%238a8a8a&bgTextureDefault=flat&borderColorDefault=%23848484&fcDefault=%23ffffff&iconColorDefault=%23777777&bgColorHover=%23ededed&bgTextureHover=flat&borderColorHover=%23cccccc&fcHover=%232b2b2b&iconColorHover=%23555555&bgColorActive=%23ffffff&bgTextureActive=flat&borderColorActive=%23848484&fcActive=%23000000&iconColorActive=%23ffffff&bgColorHighlight=%23cacaca&bgTextureHighlight=flat&borderColorHighlight=%239c9c9c&fcHighlight=%234d4d4d&iconColorHighlight=%23484848&bgColorError=%23fddfdf&bgTextureError=flat&borderColorError=%23f1a899&fcError=%235f3f3f&iconColorError=%23cc0000&bgColorOverlay=%23aaaaaa&bgTextureOverlay=flat&bgImgOpacityOverlay=0&opacityOverlay=30&bgColorShadow=%23666666&bgTextureShadow=flat&bgImgOpacityShadow=0&opacityShadow=30&thicknessShadow=5px&offsetTopShadow=0px&offsetLeftShadow=0px&cornerRadiusShadow=8px&bgImgOpacityHeader=&bgImgOpacityContent=&bgImgOpacityDefault=&bgImgOpacityHover=&bgImgOpacityActive=&bgImgOpacityHighlight=&bgImgOpacityError= */
.ui-widget {
	font-family: "Trebuchet MS", Helvetica, sans-serif;
	font-size: 105%;
}

.ui-button {
	min-width: 56.75px;
/*	height: 3em;*/
}

.ui-button-text {
/*			  top  right bottom left */
	padding: 0.5em 0.0em 0.5em 0.0em !important;
}

/*.ui-selectmenu-text {
	width: 100px !important;
	font-size: 110%;
}*/

.ui-selectmenu-button {
	width: 110px !important;
	font-size: 110%;
	height: 2.0em;
/*			  top  right bottom left */
/*	padding: 0.1em 0.0em 0.1em 0.0em;*/
  background: #ffffff;
	color: #000000;
	vertical-align: middle;
}

:checked + label {	/*make selected radio button bold*/
	font-weight: bold;
	letter-spacing: -0.2px;
}

/*.ui-selectmenu-menu .ui-menu {
	max-height: 15em;
}*/

/*
#radio label span {
	width: 200px;
}*/

/* override jQuery Mobile Theme */
.ui-mobile-viewport {
	background-color: black;
}

